--- a/themes/habitat/assets/styles/partials/_stage.scss
+++ b/themes/habitat/assets/styles/partials/_stage.scss
@@ -1,5 +1,10 @@
 .stage {
-	grid-column: 4/-2;
+	grid-column: 2 / -1;
+
+	@include media-l {
+		grid-column: 3/-1;
+		margin-top: calc(-3 * var(--offset-vertical));
+	}
 }
 
 .stage + .statement {
