--- a/themes/habitat/assets/styles/partials/_header.scss
+++ b/themes/habitat/assets/styles/partials/_header.scss
@@ -16,7 +16,7 @@
 	box-shadow: none;
 	width: 20.7rem;
 	height: 8rem;
-	grid-column: 2;
+	grid-column: 1;
 	overflow: hidden;
 	justify-self: left;
 	transition: width 0.2s ease;
@@ -31,7 +31,7 @@
 }
 
 .header__nav {
-	grid-column: 3 / -2;
+	grid-column: 3 / -1;
 	text-align: right;
 	align-self: center;
 	justify-self: right;
@@ -69,9 +69,14 @@
 }
 
 .header__claim {
+	display: none;
 	margin-bottom: $offset-vertical;
-	grid-column: 2 / -2;
+	grid-column: 1 / -1;
 	color: $color-brand-gray;
+
+	@include media-l {
+		display: block;
+	}
 }
 
 .header__subnav {
@@ -82,7 +87,7 @@
 	@include plain;
 	@include link;
 
-	grid-column: -5 / -2;
+	grid-column: -4 / -1;
 	text-align: right;
 	align-self: center;
 	justify-self: right;
@@ -115,6 +120,7 @@ div[aria-labelledby='menu-button'] {
 }
 
 .header--expanded .header__claim {
+	display: block;
 	color: mix($color-brand-blueAlt, $color-brand-white, 40%);
 }
 
@@ -126,7 +132,7 @@ div[aria-labelledby='menu-button'] {
 	text-align: left;
 	align-self: center;
 	justify-self: stretch;
-	grid-column: 2/-2;
+	grid-column: 1 / -1;
 	padding-bottom: var(--offset-vertical);
 
 	ul,
