--- a/themes/habitat/assets/styles/partials/_page.scss
+++ b/themes/habitat/assets/styles/partials/_page.scss
@@ -1,5 +1,21 @@
+.page {
+	@include grid-columns;
+	overflow: hidden;
+
+	> * {
+		grid-column: 1 / -1;
+	}
+}
+
 .page__title {
+	margin-top: calc(-1 * var(--offset-vertical));
+	margin-bottom: 0;
+
 	@include media-l {
 		grid-column: 4 / span 4;
+
+		& + .stage {
+			margin-top: 0;
+		}
 	}
 }
