--- a/themes/habitat/assets/styles/partials/_statement.scss
+++ b/themes/habitat/assets/styles/partials/_statement.scss
@@ -5,12 +5,13 @@
 	margin: calc(3 * var(--offset-vertical)) 0 calc(3 * var(--offset-vertical));
 	color: $color-brand-black;
 	box-sizing: border-box;
-	grid-column: 2 / span 5;
+	grid-column: 1 / span 5;
 	font-size: 1.5rem;
 	line-height: calc(24 / 15);
+	align-self: end;
 
 	@include media-l {
-		grid-column: 2 / span 6;
+		grid-column: 1 / span 6;
 		font-size: 2.8rem;
 		line-height: calc(45 / 28);
 	}
