--- a/themes/habitat/layouts/partials/footer.html
+++ b/themes/habitat/layouts/partials/footer.html
@@ -1,30 +1,34 @@
 <footer class="footer">
-	<div class="footer__info">
-		Das Habitat
-		{{ partial "contact.html" (dict "context" .) }}
+	<div class="footer__inner">
+		<div class="footer__info">
+			Das Habitat
+			{{ partial "contact.html" (dict "context" .) }}
+		</div>
+
+		<nav>
+			<div>
+
+			</div>
+			<div>
+
+			</div>
+		</nav>
+
+		<p class="footer__copyright">&copy; 2018–{{ now.Format "2006"}} Das Habitat Augsburg e.V.</p>
+		<p class="footer__legal">
+			<a href="/impressum/">Impressum</a>
+			<a href="/datenschutz/">Datenschutz</a>
+		</p>
 	</div>
 
-	<nav>
-		<div>
-
-		</div>
-		<div>
-
-		</div>
-	</nav>
-
-	<p class="footer__copyright">&copy; 2018–{{ now.Format "2006"}} Das Habitat Augsburg e.V.</p>
-	<p class="footer__legal">
-		<a href="/impressum/">Impressum</a>
-		<a href="/datenschutz/">Datenschutz</a>
-	</p>
-
 	<aside class="footer__sponsors">
+		<div class="footer__inner">
 			<h3>Unsere Sponsoren, Unterstützer, Stifter, Gönner und einfach fantatischen Partner.</h3>
 
 			<ul></ul>
 
 
 			<p>Du oder dein Unternehmen wollt uns unterstützen? <a href="/kontakt">Meldet euch bei uns.</a></p>
+		</div>
 	</aside>
 </footer>
