--- a/themes/habitat/assets/styles/_config.scss
+++ b/themes/habitat/assets/styles/_config.scss
@@ -16,14 +16,13 @@ $breakpoint-l: 880px;
 :root {
 	--offset-vertical: 2.4rem;
 	--offset-horizontal: 2.4rem;
+	--offset-outer: 1.6rem;
 
-	--grid-column: calc(calc(100vw - calc(1.6rem * 2)) / 6);
+	--grid-column: calc(calc(100vw - calc(var(--offset-outer) * 2)) / 6);
 	--grid-colums: repeat(6, 1fr);
 	--grid-column-gap: var(--offset-horizontal);
+	--grid-row-gap: calc(2 * var(--offset-vertical));
 	--grid-width: calc(6 * var(--grid-column) + 5 * var(--grid-column-gap));
-
-	--col2: calc(2 * var(--grid-column) + 1 * var(--grid-column-gap));
-	--col3: calc(3 * var(--grid-column) + 2 * var(--grid-column-gap));
 
 	--color-brand-yellow: #{$color-brand-yellow};
 	--color-brand-orange: #{$color-brand-orange};
@@ -42,6 +41,7 @@ $breakpoint-l: 880px;
 		--grid-column: calc(90 / 1200 * 100vw);
 		--grid-colums: repeat(8, var(--grid-column));
 		--grid-column-gap: 4rem;
+		--grid-row-gap: calc(3 * var(--offset-vertical));
 		--grid-width: calc(8 * var(--grid-column) + 7 * var(--grid-column-gap));
 		--offset-vertical: 2.5rem;
 	}
@@ -54,5 +54,6 @@ $breakpoint-l: 880px;
 
 $grid-columns: var(--grid-colums);
 $grid-column-gap: var(--grid-column-gap);
+$grid-row-gap: var(--grid-row-gap);
 
 $offset-vertical: var(--offset-vertical);
