--- a/themes/habitat/assets/styles/partials/_page.scss
+++ b/themes/habitat/assets/styles/partials/_page.scss
@@ -11,7 +11,7 @@
 	margin-top: calc(-1 * var(--offset-vertical));
 	margin-bottom: 0;
 
-	@include media-l {
+	@include media-lg {
 		grid-column: 4 / span 4;
 
 		& + .stage {
