--- a/themes/habitat/assets/styles/partials/_page.scss
+++ b/themes/habitat/assets/styles/partials/_page.scss
@@ -1,6 +1,5 @@
 .page {
 	@include grid-columns;
-	overflow: hidden;
 
 	> * {
 		grid-column: 1 / -1;
@@ -8,14 +7,13 @@
 }
 
 .page__title {
-	margin-top: calc(-1 * var(--offset-vertical));
 	margin-bottom: 0;
 
 	@include media-lg {
-		grid-column: 4 / span 4;
+		grid-column: 3 / span 4;
 
 		& + .stage {
-			margin-top: 0;
+			margin-top: calc(-1 * var(--grid-row-gap));
 		}
 	}
 }
