--- a/themes/habitat/assets/styles/_config.scss
+++ b/themes/habitat/assets/styles/_config.scss
@@ -9,6 +9,7 @@ $color-brand-white: #fcfcfa;
 $color-brand-black: #0f0f0e;
 $color-brand-gray: mix(#4c4d4a, $color-brand-white, 75%);
 $color-brand-gray-inverted: mix(#4c4d4a, $color-brand-white, 50%);
+$color-brand-gray-10: transparentize($color-brand-gray, 0.9);
 $color-brand-pale: #809979;
 
 $breakpoint-l: 880px;
