--- a/themes/habitat/assets/styles/index.scss
+++ b/themes/habitat/assets/styles/index.scss
@@ -17,17 +17,25 @@
 // Global
 @import 'global';
 @import 'typography';
-@import 'grid';
+
+// Elements
+@import 'elements/table';
 
 // Partials
+@import 'partials/box';
 @import 'partials/contact';
 @import 'partials/feature';
 @import 'partials/footer';
+@import 'partials/follow-us';
 @import 'partials/header';
 @import 'partials/page';
 @import 'partials/sidebar';
 @import 'partials/stage';
 @import 'partials/statement';
+@import 'partials/submenu';
+
+// Grid helper
+@import 'grid';
 
 // Templates
 @import 'templates/home';
