Add canonical URL

--- a/themes/habitat/layouts/_default/baseof.html
+++ b/themes/habitat/layouts/_default/baseof.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>{{ .Params.Title  }}{{ if .Params.Title }} | {{ end }}{{ .Site.Title }}</title>
 		<link rel="stylesheet" href="/assets{{ if eq (getenv "APP_ENV") "dev" }}/main.css{{ else }}{{ index .Site.Data.manifest "main.css" | relURL }}{{ end }}">
+		<link rel="canonical" href="{{ .Permalink }}"/>
 
 		{{- if(.Params.meta_keywords) -}}
 			<meta name="keywords" content="{{ delimit .Params.meta_keywords ", " }}">
