--- a/themes/habitat/assets/styles/index.scss
+++ b/themes/habitat/assets/styles/index.scss
@@ -33,6 +33,7 @@
 @import 'partials/stage';
 @import 'partials/statement';
 @import 'partials/submenu';
+@import 'partials/sponsors';
 
 // Grid helper
 @import 'grid';
