--- a/themes/habitat/assets/styles/partials/_stage.scss
+++ b/themes/habitat/assets/styles/partials/_stage.scss
@@ -1,15 +1,22 @@
 .stage {
 	grid-column: 2 / -1;
+	grid-row: 1;
+	align-self: start;
 
 	@include media-lg {
 		grid-column: 3/-1;
-		margin-top: calc(-3 * var(--offset-vertical));
+		grid-row: 1;
 	}
 }
 
 .stage + .statement {
 	position: relative;
 	z-index: 2;
-	margin-top: calc(-10 * var(--offset-vertical));
+	margin-top: 30vw;
 	margin-bottom: 0;
+	grid-row: 1;
+
+	@include media-lg {
+		grid-row: 1;
+	}
 }
