--- a/themes/habitat/assets/styles/mixins/_box.scss
+++ b/themes/habitat/assets/styles/mixins/_box.scss
@@ -2,7 +2,7 @@
 	--tint: rgba(0, 0, 0, 0);
 
 	padding: 2rem 2.4rem;
-	background: var(--tint);
+	background-color: var(--tint);
 	// prettier-ignore
 	box-shadow:
 		0 0 2px 0 transparentize($color-brand-gray, 0.9),
