--- a/themes/habitat/assets/styles/partials/_sidebar.scss
+++ b/themes/habitat/assets/styles/partials/_sidebar.scss
@@ -1,6 +1,10 @@
 .sidebar {
 	@include media-lg {
 		grid-column: -3 / -1;
-		grid-row: 2;
+		grid-row: 2 / span 2;
+
+		h2:first-child {
+			margin-top: 0;
+		}
 	}
 }
