--- a/themes/habitat/assets/styles/index.scss
+++ b/themes/habitat/assets/styles/index.scss
@@ -33,6 +33,7 @@
 @import 'partials/footer';
 @import 'partials/header';
 @import 'partials/nav';
+@import 'partials/note';
 @import 'partials/sidebar';
 @import 'partials/sponsors';
 @import 'partials/stage';
