--- a/themes/habitat/assets/styles/_typography.scss
+++ b/themes/habitat/assets/styles/_typography.scss
@@ -46,13 +46,16 @@ h2,
 
 h3,
 .h3 {
-	font-size: inherit;
+	font-size: 1.8rem;
+	line-height: calc(25 / 18);
 	font-weight: 600;
-	text-transform: uppercase;
-	margin-bottom: 1rem;
 
 	* + & {
 		margin-top: 2rem;
+	}
+
+	+ p {
+		margin-top: 0;
 	}
 }
 
