--- a/themes/habitat/layouts/partials/footer.html
+++ b/themes/habitat/layouts/partials/footer.html
@@ -27,7 +27,12 @@
 				</ul>
 			</div>
 			<div>
-
+				<h3><a href="/ueber-uns/">Über uns</a></h3>
+				<ul>
+					<li>
+						<a href="/kontakt">Kontakt &amp; Anfahrt</a>
+					</li>
+				</ul>
 			</div>
 		</nav>
 	</div>
